syntax = "proto3";

package guff.proto;

service AdminService {
  rpc Scrape(ScrapeRequest) returns (ScrapeResponse) {};
}

message ScrapeRequest {};

message ScrapeResponse {};

